--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ exclude: [".gitignore", "readme.md", "Gemfile", "Gemfile.lock"]
 markdown: rdiscount
 permalink: pretty
 
-baseurl:     /opendataday
+baseurl: "/opendataday"
