add preliminary agenda

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # General Jekyll Config
 auto: true
 exclude: [".gitignore", "readme.md", "Gemfile", "Gemfile.lock"]
-markdown: rdiscount
+markdown: kramdown
 permalink: pretty
 
 baseurl: "/opendataday"
